<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/bg_card"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:padding="@dimen/_8sdp"
        android:text="@string/set_as_deafult"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <TextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_4sdp"
            android:padding="@dimen/_8sdp"
            android:gravity="left"
            android:text="@string/day_1"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:gravity="right"
            android:text="@string/day_10"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="9"
        android:theme = "@style/MemoriaSeekBar"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:thumb="@drawable/ic_seekbar_pointer">
    </SeekBar>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/bg_btn"
        android:text="@string/ok"
        android:textColor="@color/white" />

</LinearLayout>