<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/bg_card"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/ic_location_system"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:padding="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/location_system"
        android:textColor="@color/text_dark"
        android:fontFamily="@font/qanelas_soft_demo_medium"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:padding="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/to_continue_turn_on_device_location_please"
        android:textColor="@color/text_light"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/_105sdp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_12sdp"
            android:background="@drawable/bg_red"
            android:text="@string/no"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="@dimen/_105sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:background="@drawable/bg_btn"
            android:text="@string/yes"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>