<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/user_and_code_verify_background"
        android:fitsSystemWindows="true"
        tools:context=".view.UserVerifyActivity">

        <TextView
            android:id="@+id/txt_AppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/quantify"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/txt_PageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_AppName"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/qanelas_soft_demo_extrabold"
            android:text="@string/txt_title_user_verify"
            android:textAlignment="center"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/txt_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_PageName"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/qanelas_soft_demo_ultralight"
            android:text="@string/txt_description_user_verify"
            android:textAlignment="center"
            android:textColor="@color/text_light"
            android:textSize="@dimen/_11sdp" />

        <RelativeLayout
            android:id="@+id/Linear_PhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_Description"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="130dp">

            <EditText
                android:id="@+id/et_Mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/bg_edt"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="13"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/text_dark"/>

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:background="@drawable/ic_smartphone"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_UserVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_below="@id/Linear_PhoneNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_btn"
            android:text="@string/get_the_code"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_below="@+id/btn_UserVerify"
            android:layout_marginTop="@dimen/_20sdp"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/qanelas_soft_demo_medium"
                android:textSize="@dimen/_12sdp"
                android:text="@string/already_have_an_account"
                android:layout_marginRight="@dimen/_4sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/qanelas_soft_demo_medium"
                android:textSize="@dimen/_12sdp"
                android:text="@string/sign_in" />
        </LinearLayout>

        <ir.alirezabdn.wp7progress.WP7ProgressBar
            android:id="@+id/wp7progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:animationDuration="2300"
            app:indicatorColor="@color/colorPrimary"
            app:indicatorHeight="7"
            app:indicatorRadius="5"
            app:interval="100"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>
</layout>