<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_5sdp"
    android:background="@drawable/bg_card">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivImage"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_8sdp"
        android:src="@drawable/my_profile"
        app:civ_border_color="#FFffff"
        app:civ_border_width="@dimen/_1sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/ali_mt"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvLastText"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintTop_toTopOf="@+id/ivImage" />


    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/m2"
        android:textColor="@color/text_light"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_userName"
        app:layout_constraintStart_toEndOf="@+id/tv_userName" />

    <TextView
        android:id="@+id/tvLastText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/lastActivity"
        android:textColor="@color/text_light"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintBottom_toBottomOf="@+id/ivImage"
        app:layout_constraintStart_toStartOf="@+id/tv_userName"
        app:layout_constraintTop_toBottomOf="@+id/tv_userName" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardPreventCornerOverlap="false">

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/my_profile" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>